--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -17,11 +17,10 @@ ul#menu {
 }
 
 #accordeon .header {
-    background-color: pink;
-    color: black;
+    background-color: #811919;
+    color: white;
     cursor: pointer;
     padding: 18px;
-    /*width: 100%;*/
     border: none;
     outline: none;
     font-size: 15px;
@@ -33,8 +32,18 @@ ul#menu {
 h1.pRessource {
 	text-align: center;
 }
+h1.pExercice {
+	text-align: center;
+}
+h1.pEspace {
+	text-align: center;
+}
 
 article {
 	margin-left: 1%;
 	margin-right: 1%;
+}
+
+strong {
+	font-size: 20px
 }
