--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -39,10 +39,17 @@ h1.pEspace {
 	text-align: center;
 }
 
-article {
+article#pres1 {
 	margin-left: 1%;
 	margin-right: 1%;
-	border: 2px black dashed;
+}
+
+h3 {
+	font-weight: bold;
+}
+
+#accordeonPresentation .headerPres {
+	cursor: pointer;
 }
 
 strong {
