--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -52,6 +52,14 @@ h3 {
     cursor: pointer;
 }
 
+#accordeonSentiment {
+    margin-left: 1%;
+}
+
+#accordeonSentiment .SentimentParCat{
+   cursor: pointer;
+}
+
 strong {
     font-size: 20px
 }
