l'affichage relié a la base de donné des exo

--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -63,3 +63,13 @@ h3 {
 strong {
     font-size: 20px
 }
+
+.buttonExo {
+ 	background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
