--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -40,8 +40,13 @@ h1.pEspace {
 }
 
 article#pres1 {
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
+}
+
+article {
+    margin-left: 1.5%;
+    margin-right: 1.5%;
 }
 
 h3 {
@@ -61,6 +66,10 @@ h3 {
 }
 
 #accordeonSentiment .SentimentParCat{
+   cursor: pointer;
+}
+
+#accordeonBesoin .BesoinParCat{
    cursor: pointer;
 }
 
