--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -27,6 +27,7 @@ ul#menu {
     transition: 0.4s;
     text-align: center;
     margin: 1%;
+    position: relative;
 }
 
 h1.pRessource {
@@ -45,6 +46,7 @@ article#pres1 {
 }
 
 article {
+    font-size: 20px;
     margin-left: 1.5%;
     margin-right: 1.5%;
 }
@@ -85,4 +87,69 @@ strong {
     text-decoration: none;
     margin: 4px 2px;
     cursor: pointer;
+}
+
+h1#accueil {
+    font-size: 500%;
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    text-align: center;
+    margin-left: 28%;
+    margin-right: 28%;
+}
+
+img {
+    width: 10%;
+    height: 10%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+p#description {
+    font-size: 20px;
+}
+
+ul#menuHorizontal li {
+    display : inline;
+    padding : 0 0.5em;
+
+}
+
+ul#menuHorizontal {
+    list-style-type : none;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+ul#menuVertical {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position: fixed;
+    margin-top: 5%;
+}
+
+li a {
+    font-size: 30px;
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+#accordeon {
+    margin-left: 210px;
+}
+
+body {
+    background-color: #ffeeeb;
 }
