--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -182,3 +182,15 @@ ul#reseaux li {
 #formOutPut p{
     font-size: 28px;
 }
+
+#partage {
+    position: fixed;
+    margin: auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.buttonExo:hover {
+    background-color: #f5852f;
+}
