--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -123,7 +123,7 @@ ul#menuVertical {
     margin-top: 5%;
 }
 
-li a {
+#menuVertical li a {
     font-size: 30px;
     display: block;
     color: #000;
@@ -131,7 +131,7 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+#menuVertical li a:hover {
     background-color: #555;
     color: white;
 }
