--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -96,11 +96,11 @@ h1#accueil {
 }
 
 img#logoAccueil {
-    width: 10%;
-    height: 10%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 200px;
+    height: 200px;
+    margin-left: 10%;
+    margin-top: 4%;
+    position: absolute;
 }
 
 img#logoPage {
@@ -140,6 +140,14 @@ ul#menuVertical {
     margin-left: 210px;
 }
 
+ #description {
+    margin-left: 400px;
+    margin-top: 3%;
+    margin-bottom: 4%;
+    margin-right: 4%;
+    text-align: justify;
+ }
+
 body {
     background-color: #ffeeeb;
 }
@@ -157,8 +165,8 @@ td {
 img.ressource,
 img.exercer,
 img.espace{
-    width: 150px;
-    height: 150px;
+    width: 50%;
+    height: 50%;
     margin: auto;
     cursor: pointer;
 }
