--- a/server/src/main/webapp/style.css
+++ b/server/src/main/webapp/style.css
@@ -213,3 +213,7 @@ ul#reseaux li {
 #btnMenu:hover {
     color: white;
 }
+
+.pDeleteSentiment, .pDeleteBesoin, .pDeleteExercice, .pDeleteQuestion {
+    margin-left: 150px;
+}
